2006-01-26  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* MatrixElements/*: New qq->W->ll and ee->gZ->qq matrix
	elements. Replaced default qq->gZ->ll
	
	* src/Analysis.in, Analysis/SimpleLHCAnalysis.*,
	Analysis/Histogram.*, Analysis/BasicConsistency.*: Added
	SimpleLHCAnalysis, cleaned up Histogram class and BasicConsistency
	analysis.

	* src/Shower.in, Shower/PartnerFinder.cc,
	Shower/KinematicsReconstructor.cc, Shower/Evolver.cc,
	Shower/BackwardEvolver.cc: fixed ISR/FSR crash for LHC. This is
	NOT a permanent solution, there is no timelike showering of ISR
	particles at the moment! 

2006-01-24 David Grellscheid <David.Grellscheid@durham.ac.uk>

	* PDF/MRST.cc: Restructured for speed, high-x problem unchanged
	
2006-01-23  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* Analysis/*: Added more simple analysis handlers for multiplicity
	checking and general consistency.

	* src/Hadronization.in: reset s-quark weight to 1.0

	* PDF/MRST.cc: Added GeV2 to fix wrong PDF behaviour
	
2006-01-23  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* Added basic analysis handlers

2006-01-06  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* Various changes to get the forced splitting to work
	
	* Shower/Makefile.am (Repository): Change to Makefile due to move of SudakovFormFactor to SplittingFunctions directory

2005-12-22  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* Shower/ForwardEvolver.cc (Repository): SplttingFunctions and related classes cleaned up and moved to new directory 

2005-12-18 David Grellscheid <David.Grellscheid@durham.ac.uk>

	* Shower/SudakovFormFactor.cc: Veto bugs fixed
	
	* Shower/KinematicsReconstructor.cc, Shower/BackwardEvolver.cc:
	wrapped forced splittings in '#ifdef PHILSCODE', to make Shower
	testing work (also in PDF/BaryonRemnants.cc)

	* Shower/SplittingGenerator.cc: small change, wrapped some 'cout'
	in a DEBUG_LEVEL test

	* Hadronization/ClusterHadronizationHandler.cc: added missing
	Remnant code
