@@ -1,3 +1,8 @@
+2006-01-31  David Grellscheid <David.Grellscheid@durham.ac.uk>
+
+	* Decay/HwDecayHandler.cc: Added vertex setting to handle displaced
+	vertices. 
+	
 2006-01-26  David Grellscheid  <David.Grellscheid@durham.ac.uk>
 
 	* MatrixElements/*: New qq->W->ll and ee->gZ->qq matrix
